# IoT-application-set

./: .gitignore  .gitmodules  Dockerfile  HOW_TO_ADD_AN_APP.md  README.md  app.py  bugs.py  dev  dev-arm.sh  dev.py  docker-compose.arm.yml  docker-compose.dev.yml  docker-compose.fuzzing.yaml  docker-compose.prod.yml  docker-compose.yml  docker_publish.sh  generate.sh  generate_clients.py  python-sudo.sh  requirements.txt  test-network.sh  tutorial.sh
.run/: dev.run.xml  dev_build.run.xml
apps/: docker-compose.yml  notes.md
apps/FlowerPower/: CMakeLists.txt  JSON IO specifications.json  openapi.yaml  setup.sh
apps/FlowerPower/docs/: Raport Analiza.docx
apps/FlowerPower/include/: Plant.hpp  Sensor.hpp
apps/FlowerPower/src/: Sensor.cpp
apps/SmartKettle/: .dockerignore  Makefile  docker_publish.sh
apps/SmartTV-Alpha-X/: README.md  smartTv.h
apps/WindWow/: $log  Server.cpp  ServerMQTT.cpp  Window.cpp  docker_publish.sh  openapi.yaml  req.sh  server.sh  settings.json  start.bat  user_cases  user_cases.cpp  user_settings.json  window_output_original.json  window_settings.json
apps/app_template/: Dockerfile  build.sh  deps_ubuntu.sh  docker_publish.sh  generator_config.json  openapi.yaml  run.sh
apps/flowerpower/: Dockerfile  README.md  build.sh  delay.sh  deps_ubuntu.sh  docker_publish.sh  openapi.yaml  run.sh
apps/flowerpower/demo/: CMakeLists.txt  main.cpp
apps/flowerpower/src/: CMakeLists.txt  Plant.cpp  SmartPot.cpp  SmartPotEndpoint.cpp
apps/serasmart/: .gitignore  Dockerfile  README.md  app.py  asyncapi.yaml  common.py  db.py  generator_config.json  openapi.yaml  run.sh  schema.sql  server_http.py  server_mqtt.py  status.py
apps/simple_mqtt/: Dockerfile  publisher.py  subscriber.py
apps/smarteeth/: Dockerfile  Makefile  README.md  Smarteeth.postman_collection.json  brushing.cpp  brushing.hpp  buffers-specification.json  configuration.cpp  configuration.hpp  delay.sh  directions.cpp  directions.hpp  docker_publish.sh  health.cpp  health.hpp  json.hpp  mqtt.cpp  mqtt.hpp  openapi.yaml  smarteeth.cpp  statistics.cpp  statistics.hpp  swagger.yaml
apps/smartkettle/: Dockerfile  README.md  async-api.yaml  build.sh  configurations.json  deps_ubuntu.sh  openapi.yaml  run.sh  smart_kettle.cpp
apps/smarttv/: CMakeLists.txt  CMakeLists_ARM.txt  Dockerfile  build.sh  deps_ubuntu.sh  documentatie.json  endpoints.h  main.cpp  openapi.yaml  push_docker.sh  run.sh  server.h  smartTv.h
apps/smarttv/data_files/: dateIstoricVizionari.csv
apps/smarttv/swappable_files/: window_settings.json
bug_unpatches/: README.md  a2_dont_call_abs_on_temperature_diff.patch  a3_dont_call_min_for_brightness.patch  a4_dont_check_temperature.patch  a5_json_key_not_checked.patch  a7_windwow_set_setting_crash.patch  activatesolarlamp_luminosity_not_changed.patch  b1_invalid_sensor_type.patch  b2_smarteeth_config_nullptr.patch  b3_smartkettle_oob_read_boil_hist.patch  b4_unchecked_map_access.patch  b5_unchecked_error.patch  b6_settings_race_condition.patch  b7_command_injection.patch  b8_double_free.patch  dont_call_abs_on_temperature_diff.patch  listen_to_localhost.patch
clients/: README.md  smartkettle.py  smarttv.py  windwow.py
clients_builder/: Dockerfile  generate_clients.py
configs/: flowerpower.json  smarteeth.json  smartkettle.json  smarttv.json  windwow.json
docs/: dataset_raspberry.md  mqtt_realworld.md
flowerpower-api-client/: README.md
flowerpower_api_client/: app.py  setup.py
hub/: Dockerfile  app.py  change_ports.sh  docker_publish.sh  entry.sh  requirements.txt  start_apps.sh  trigger.py
restler/: Dockerfile  fuzz.sh
smarttv-api-client/: app_smarttv.py  setup.py
smarttv_api_client/: README.md
utils/: README.md  build_docker_images_for_arch.sh  create_tag_for_multi_arch.sh
windwow-api-client/: windwow.py
windwow_api_client/: README.md  setup.py  windwow.py
(+363 files in other folders)
